[package]
name = "proc_monitor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sysinfo = "0.38.4"
toml = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
winapi = { version = "0.3.9", features = ["wincon"] }
